--- a/Bookstore.Blazor/appsettings.json
+++ b/Bookstore.Blazor/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=RS-DS10\\SQLEXPRESS;Initial Catalog=Bookstore;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
